<?xml version="1.0" encoding="utf-8"?>
<keyboard-layouts xmlns:android="http://schemas.android.com/apk/res/android">
    <keyboard-layout android:name="keyboard_layout_volantis_english_uk"
            android:label="@string/keyboard_layout_volantis_english_uk_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_english_uk" />
    <keyboard-layout android:name="keyboard_layout_volantis_english_us"
            android:label="@string/keyboard_layout_volantis_english_us_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_english_us" />
    <keyboard-layout android:name="keyboard_layout_volantis_english_us_intl"
            android:label="@string/keyboard_layout_volantis_english_us_intl_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_english_us_intl" />
    <keyboard-layout android:name="keyboard_layout_volantis_german"
            android:label="@string/keyboard_layout_volantis_german_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_german" />
    <keyboard-layout android:name="keyboard_layout_volantis_french"
            android:label="@string/keyboard_layout_volantis_french_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_french" />
    <keyboard-layout android:name="keyboard_layout_volantis_french_ca"
            android:label="@string/keyboard_layout_volantis_french_ca_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_french_ca" />
    <keyboard-layout android:name="keyboard_layout_volantis_italian"
            android:label="@string/keyboard_layout_volantis_italian_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_italian" />
    <keyboard-layout android:name="keyboard_layout_volantis_japanese"
            android:label="@string/keyboard_layout_volantis_japanese_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_japanese" />
    <keyboard-layout android:name="keyboard_layout_volantis_spanish"
            android:label="@string/keyboard_layout_volantis_spanish_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_spanish" />
    <keyboard-layout android:name="keyboard_layout_volantis_belgian"
            android:label="@string/keyboard_layout_volantis_belgian_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_belgian" />
    <keyboard-layout android:name="keyboard_layout_volantis_swedish"
            android:label="@string/keyboard_layout_volantis_swedish_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_swedish" />
    <keyboard-layout android:name="keyboard_layout_volantis_korean"
            android:label="@string/keyboard_layout_volantis_korean_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_korean" />
    <keyboard-layout android:name="keyboard_layout_volantis_zhuyin"
            android:label="@string/keyboard_layout_volantis_zhuyin_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_zhuyin" />
    <keyboard-layout android:name="keyboard_layout_volantis_cangjie"
            android:label="@string/keyboard_layout_volantis_cangjie_label"
            android:keyboardLayout="@raw/keyboard_layout_volantis_cangjie" />
</keyboard-layouts>
